Resolves: tdf#138826 adjust the aTmpMtf to get drawn at maPos of Action

see also #i112076#

Change-Id: I9c3eea3d5d518da164821bfcf494292dccb69e27
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124714
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>